cmake_minimum_required(VERSION 3.21)
project(Zad_03)

set(CMAKE_CXX_STANDARD 23)

add_executable(Zad_03 main.cpp)

add_executable(03_01 03_01/03_01.cpp)
add_executable(03_02 03_02/03_02.cpp)
add_executable(03_03 03_03/03_03.cpp)
add_executable(03_04 03_04/03_04.cpp)
add_executable(03_05 03_05/03_05.cpp)
add_executable(03_06 03_06/03_06.cpp)
add_executable(03_07 03_07/03_07.cpp)
add_executable(03_08 03_08/03_08.cpp)
add_executable(03_09 03_09/03_09.cpp)
add_executable(03_10 03_10/03_10.cpp)
add_executable(03_sort 03_sort/03_sort.cpp)
add_executable(03_shop 03_shop/03_shop.cpp)