cmake_minimum_required(VERSION 3.21)
project(Zad_04)

set(CMAKE_CXX_STANDARD 14)

add_executable(Zad_04 main.cpp)

add_executable(04_01 04_01/04_01.cpp)
add_executable(04_02 04_02/04_02.cpp)
add_executable(04_03 04_03/04_03.cpp)
add_executable(04_04 04_04/04_04.cpp)
add_executable(04_05 04_05/04_05.cpp)
add_executable(04_06 04_06/04_06.cpp)